# agnc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json  roadmap.md  test-all.txt  test-err.txt  test-err2.txt  test-err3.txt  vcpkg.json
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Grpc.cmake  MsvcCompat.cmake  Vcpkg.cmake
config/: agnc.example.json
descriptors/gateways/: anthropic.json  custom-openai-compatible.json  gemini.json  naraya.json  ollama.json  opencode-local.json  openrouter.json
docs/: smoke-test.md  visual-studio-2026.md
include/agnc/: anthropic.h  atomic_write.h  cli.h  config.h  console.h  conversation.h  cost.h  ctags_locate.h  export.h  grpc_bridge.h  hooks.h  line_edit.h  markdown_render.h  oauth.h  ollama.h  opencode.h  path.h  permissions.h  provider.h  query.h  repl_jobs.h  rg_locate.h  session.h  skills.h  status.h  tool.h  tool_cache.h  tool_path.h  tui.h  version.h
include/agnc/mcp/: client.h  jsonrpc.h  registry.h  session.h  stdio.h  tools.h
include/agnc/net/: http.h  sse.h
proto/agnc/v1/: agent.proto
scripts/: build-vs.ps1  build.ps1  generate_integrations.py  probe_opencode_api.py
src/: main.c
src/cli/: args.c  console.c  doctor.c  line_edit.c  markdown_render.c  models.c  print.c  repl.c  repl_jobs.c  tui.c
src/config/: config.c  oauth.c
src/engine/: conversation.c  cost.c  hooks.c  query.c  session.c  skills.c  tool_cache.c
src/grpc/: grpc_bridge.c  serve.cpp  serve_stub.c
src/integrations/: registry.c
src/mcp/: client.c  jsonrpc.c  registry.c  session.c  stdio.c  tools.c
src/net/: http.c  sse.c
src/permissions/: permissions.c
src/providers/: anthropic.c  ollama.c  opencode.c  provider.c
src/tools/: ctags_locate.c  edit_file.c  find_symbol.c  glob.c  grep.c  read_file.c  rg_locate.c  shell.c  sub_agent.c  todo_write.c  tool_path.c  web_fetch.c  write_file.c
src/util/: atomic_write.c  path.c  status.c
tests/: test_atomic_write.c  test_config_provider.c  test_grpc_bridge.c  test_grpc_health.cpp  test_hooks.c  test_markdown_render.c  test_mcp_filesystem_e2e.c  test_mcp_jsonrpc.c  test_mcp_registry.c  test_mcp_stdio.c  test_mcp_tools.c  test_oauth.c  test_provider_registry.c  test_session.c  test_shell.c  test_skills.c  test_sse.c  test_todo_write.c  test_tool_cache.c  test_tool_path.c  test_web_fetch.c
tests/fixtures/: mcp_config_test.json  mcp_filesystem_e2e.json  mcp_mock_server.c  permissions_always_allow.json  permissions_always_deny.json  provider_api_key_file.json  provider_test.json  providers_multi.json
tests/fixtures/keys/: gemini.txt  openrouter.txt
tests/stubs/: grpc_bridge_link_stubs.c
